// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetProgressIcon matches custom props snapshot 1`] = `
<div
  class="c-card c-text-white c-bg-info"
>
  <div
    class="c-card-body"
  >
    <!---->
     
    <div
      class="c-h4 c-mb-0"
    >
      test
    </div>
     
    <small
      class="c-text-muted c-text-uppercase c-font-weight-bold"
    >
      
      test
    
    </small>
     
    <div
      class="c-progress c-progress-xs c-my-3 c-mb-0 c-progress-white"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="35"
        class="c-progress-bar"
        role="progressbar"
        style="width: 35%;"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`CWidgetProgressIcon matches default props snapshot 1`] = `
<div
  class="c-card"
>
  <div
    class="c-card-body"
  >
    <!---->
     
    <div
      class="c-h4 c-mb-0"
    >
      header:string
    </div>
     
    <small
      class="c-text-muted c-text-uppercase c-font-weight-bold"
    >
      
      text:string
    
    </small>
     
    <div
      class="c-progress c-progress-xs c-my-3 c-mb-0"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="c-progress-bar"
        role="progressbar"
        style="width: 25%;"
      >
        
      </div>
    </div>
  </div>
</div>
`;
